fix: Add overflow befavior to Math block
fix #28

--- a/src/components/markdown/markdown.module.css
+++ b/src/components/markdown/markdown.module.css
@@ -12,6 +12,10 @@
   color: var(--text-quote);
 }
 
+.math {
+  overflow-x: auto;
+}
+
 .table {
   width: 100%;
   border-top: 2px solid var(--border);
